--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>BFRK_API</groupId>
   <artifactId>bfrk_api</artifactId>
-  <version>20260106-snapshot</version>
+  <version>20260206-prod-snapshot</version>
   <packaging>war</packaging>
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
