--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.nvbw.dm.ddoev</groupId>
   <artifactId>bfrk_api-DEVELOP</artifactId>
-  <version>20260219</version>
+  <version>20260220</version>
   <packaging>war</packaging>
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
@@ -91,7 +91,7 @@
     <dependency>
        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>3.4.0</version>
+        <version>3.5.1</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
     <dependency>
@@ -113,7 +113,7 @@
     <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
-        <version>2.22.1</version>
+        <version>2.25.3</version>
     </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
     <dependency>
@@ -150,18 +150,6 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
       <version>1.28.0</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
-    <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-jar-plugin</artifactId>
-      <version>3.1.0</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-assembly-plugin -->
-    <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-assembly-plugin</artifactId>
-      <version>3.3.0</version>
     </dependency>
 <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
     <dependency>
@@ -205,59 +193,12 @@
       <artifactId>jaxen</artifactId>
       <version>1.2.0</version>
       </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-install-plugin -->
+      <!-- Source: https://mvnrepository.com/artifact/plexus/plexus-utils -->
       <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-install-plugin</artifactId>
-      <version>2.5.2</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
-      <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-plugin-api</artifactId>
-      <version>2.0.9</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-artifact -->
-      <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-artifact</artifactId>
-      <version>2.0.9</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-core -->
-      <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-core</artifactId>
-      <version>2.0.9</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-toolchain -->
-      <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-toolchain</artifactId>
-      <version>1.0</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.maven.shared/maven-shared-utils -->
-      <dependency>
-      <groupId>org.apache.maven.shared</groupId>
-      <artifactId>maven-shared-utils</artifactId>
-      <version>0.1</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.maven.shared/maven-shared-incremental -->
-      <dependency>
-      <groupId>org.apache.maven.shared</groupId>
-      <artifactId>maven-shared-incremental</artifactId>
-      <version>1.1</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.codehaus.plexus/plexus-compiler-api -->
-      <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-compiler-api</artifactId>
-      <version>2.2</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.codehaus.plexus/plexus-compiler-manager -->
-      <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-compiler-manager</artifactId>
-      <version>2.2</version>
+        <groupId>plexus</groupId>
+        <artifactId>plexus-utils</artifactId>
+        <version>1.0.3</version>
+        <scope>compile</scope>
       </dependency>
 
     <!-- =================== Dependencies für DivaGraph =================== -->
@@ -320,18 +261,16 @@
       <artifactId>gt-api</artifactId>
       <version>${geotools.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.locationtech.jts</groupId>
       <artifactId>jts-core</artifactId>
       <version>1.20.0</version>
     </dependency>
-
-      <dependency>
-        <groupId>de.nvbw.dm.ddoev</groupId>
-        <artifactId>divagraph</artifactId>
-        <version>20260219</version>
-      </dependency>
+    <dependency>
+      <groupId>de.nvbw.dm.ddoev</groupId>
+      <artifactId>divagraph</artifactId>
+      <version>20260220</version>
+    </dependency>
   </dependencies>
     <organization>
       <name>NVBW Nahverkehrsgesellschaft Baden-Württemberg mbH</name>
